--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <title>Home</title>
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
-    <link href="https://file.myfontastic.com/3j45yvRpaWhzeStdASehh9/icons.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Yellowtail&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="main-header">
         <div class="container container--flex">
             <div class="logo-container column column--50">
-                <h1 class="logo">Tu Pizza</h1>
+                <h1 class="logo">Florería Isabella</h1>
             </div>
             <div class="main-header__contactInfo column column--50">
                 <p class="main-header__contactInfo__phone">
@@ -19,7 +21,7 @@
                     </span>
                 </p>
                 <p class="main-header__contactInfo__addres">
-                    <span class="icon-location">Mi calle 123 Talcahuano</span>
+                    <span class="icon-location">Av Los Rios #650  Laja</span>
                 </p>
                 
             </div>
@@ -31,62 +33,66 @@
             <ul class="menu" id="menu">
                 <li class="menu__item"><a href="/" class="menu__link menu__link--select">Inicio</a></li>
                 <li class="menu__item"><a href="nosotros.html" class="menu__link">Nosotros</a></li>
-                <li class="menu__item"><a href="galeria.html" class="menu__link">Galeria</a></li>
+                <li class="menu__item"><a href="galeria.html" class="menu__link">Productos</a></li>
                 <li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
             </ul>
             <div class="social-icon">
-                <a href="" class="social-icon__link"><span class="icon-facebook"></span></a>
+                <a href="https://www.facebook.com/profile.php?id=100010477214628" class="social-icon__link"><span class="icon-facebook"></span></a>
                 <a href="" class="social-icon__link"><span class="icon-twitter"></span></a>
                 <a href="" class="social-icon__link"><span class="icon-instagram"></span></a>
             </div>
         </div>
     </nav>
     <section class="banner">
-        <img src="img/banner.jpg" alt="" class="banner__img">
-        <div class="banner__content">La mejor Pizza del Mundo</div>
+        <img src="imagenes/flower-field-250016_1280.jpg" alt="" class="banner__img">
+        <div class="banner__content">Porque no hace falta una ocasión especial para cubrirte de flores</div>
     </section>
     <main class="main">
         <section class="group--color">
             <div class="container">
-                <h2 class="main__title">Hola Bienvenido</h2>
+                <h2 class="main__title">Bienvenido</h2>
                 <p class="main_txt">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, repudiandae ea optio eligendi aut odio.
+                    ¡Bienvenido a Florería Isabella! Somos tu destino floral ideal, donde cada pétalo
+                     cuenta una historia y cada ramo es una expresión de amor, alegría y gratitud.
+                      Desde elegantes arreglos para eventos especiales hasta simples gestos de afecto, 
+                      estamos aquí para convertir tus momentos en memorias inolvidables.
+                       Descubre la frescura y la belleza que solo nuestras flores pueden ofrecer
                 </p>
             </div>
         </section>
         <section class="group main__about_description">
             <div class="container container--flex">
                 <div class="column column--50">
-                    <img src="img/pizza1.jpg" alt="">
+                    <img src="imagenes/hermoso-sorprendente-paisaje-campo-flores-cosmos-puesta-sol-fondo-pantalla-naturaleza_1484-2495.avif" alt="">
                 </div>
                 <div class="column column--50">
                     <h3 class="column__title">Lorem ipsum dolor sit amet.</h3>
                     <p class="column__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae natus necessitatibus animi nam rem eveniet dignissimos, accusantium eum veniam ipsa quaerat cumque voluptatibus ex, minima corporis fugit ipsam explicabo! Rem.Quae natus necessitatibus animi nam rem eveniet dignissimos, accusantium eum veniam ipsa quaerat cumque voluptatibus ex, minima corporis fugit ipsam explicabo! Rem</p>
-                    <a href="" class="btn btn--contact">Contact</a>
+                    <a href="contacto.html" class="btn btn--contact">Contáctanos</a>
                 </div>
             </div>
         </section>
         <section class="group today-special">
-            <h2 class="group__title">Pizza de Hoy</h2>
+            <h2 class="group__title">Más vendidos</h2>
             <div class="container container--flex">
                 <div class="column column--50--25">
-                    <img src="img/plato1.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Pizza Special 1</div>
+                    <img src="imagenes/flor1.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">Arreglo 1</div>
                     <div class="today-special__price">$99</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="img/plato2.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Pizza Special 2</div>
+                    <img src="imagenes/flor2.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">Arreglo 2</div>
                     <div class="today-special__price">$99</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="img/plato3.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Pizza Special 3</div>
+                    <img src="imagenes/flor3.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">Arreglo 3</div>
                     <div class="today-special__price">$99</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="img/plato4.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Pizza Special 4</div>
+                    <img src="imagenes/flor4.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">Arreglo 4</div>
                     <div class="today-special__price">$99</div>
                 </div>
             </div>
@@ -101,17 +107,17 @@
             </div>
             <div class="column column--33">
                 <h2 class="column__title">Contactenos</h2>
-                <p class="column__txt">Mi calle 123 Talcahuano</p>
+                <p class="column__txt">Av Los Rios #650 Laja</p>
                 <p class="column__txt">Telefono: 999-999-999</p>
                
             </div>
             <div class="column column--33">
                 <h2 class="column__title">Siguenos</h2>
-                <p class="column__txt"><a href="" class="icon-facebook">Facebook</a></p>
+                <p class="column__txt"><a href="https://www.facebook.com/profile.php?id=100010477214628" class="icon-facebook">Facebook</a></p>
                 <p class="column__txt"><a href="" class="icon-twitter">Twitter</a></p>
                 <p class="column__txt"><a href="" class="icon-instagram">Instagram</a></p>
             </div>
-            <p class="copy">@ 2020 Tu Pizza | Todos los derechos reservados</p>
+            <p class="copy">@ 2024 Florería Isabella | Todos los derechos reservados</p>
         </div>
     </footer>
     <script src="js/menu.js"></script>
