--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Florería Isabella</title>
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0">
+    <link rel="icon" href="imagenes/icono_pagina.png">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Yellowtail&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/about.css">
+    <link href="https://file.myfontastic.com/3j45yvRpaWhzeStdASehh9/icons.css" rel="stylesheet">
 </head>
 <body>
     <header class="main-header">
@@ -33,13 +36,13 @@
             <ul class="menu" id="menu">
                 <li class="menu__item"><a href="/" class="menu__link menu__link--select">Inicio</a></li>
                 <li class="menu__item"><a href="nosotros.html" class="menu__link">Nosotros</a></li>
-                <li class="menu__item"><a href="galeria.html" class="menu__link">Productos</a></li>
+                <li class="menu__item"><a href="galeria.html" class="menu__link">Galería</a></li>
                 <li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
             </ul>
             <div class="social-icon">
                 <a href="https://www.facebook.com/profile.php?id=100010477214628" class="social-icon__link"><span class="icon-facebook"></span></a>
-                <a href="" class="social-icon__link"><span class="icon-twitter"></span></a>
-                <a href="" class="social-icon__link"><span class="icon-instagram"></span></a>
+                <a href="https://twitter.com" class="social-icon__link"><span class="icon-twitter"></span></a>
+                <a href="https://www.instagram.com/floreria_isabella_laja/" class="social-icon__link"><span class="icon-instagram"></span></a>
             </div>
         </div>
     </nav>
@@ -50,7 +53,7 @@
     <main class="main">
         <section class="group--color">
             <div class="container">
-                <h2 class="main__title">Bienvenido</h2>
+                <h2 class="group__galeria">Bienvenido</h2>
                 <p class="main_txt">
                     ¡Bienvenido a Florería Isabella! Somos tu destino floral ideal, donde cada pétalo
                      cuenta una historia y cada ramo es una expresión de amor, alegría y gratitud.
@@ -66,8 +69,11 @@
                     <img src="imagenes/hermoso-sorprendente-paisaje-campo-flores-cosmos-puesta-sol-fondo-pantalla-naturaleza_1484-2495.avif" alt="">
                 </div>
                 <div class="column column--50">
-                    <h3 class="column__title">Lorem ipsum dolor sit amet.</h3>
-                    <p class="column__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae natus necessitatibus animi nam rem eveniet dignissimos, accusantium eum veniam ipsa quaerat cumque voluptatibus ex, minima corporis fugit ipsam explicabo! Rem.Quae natus necessitatibus animi nam rem eveniet dignissimos, accusantium eum veniam ipsa quaerat cumque voluptatibus ex, minima corporis fugit ipsam explicabo! Rem</p>
+                    <p class="column__txt">En nuestra florería, nos especializamos en ofrecerte una amplia variedad de flores frescas 
+                        y hermosas, perfectas para cada ocasión especial en tu vida. Desde bodas y cumpleaños hasta aniversarios y
+                         simplemente porque sí, estamos aquí para crear arreglos florales que cautiven y emocionen. Ya sea que desees
+                          rosas románticas, lirios elegantes o girasoles alegres, nuestros expertos floristas están listos para hacer
+                          realidad tus sueños florales. Haz tu pedido hoy y deja que nuestras flores hablen por ti.</p>
                     <a href="contacto.html" class="btn btn--contact">Contáctanos</a>
                 </div>
             </div>
@@ -97,29 +103,27 @@
                 </div>
             </div>
         </section>
-      
     </main>
     <footer class="main-footer">
         <div class="container container--flex">
             <div class="column column--33">
                 <h2 class="column__title">Visitanos</h2>
-                <p class="column__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat illo atque impedit, repudiandae </p>
+                <p class="column__txt">Av Los Rios #650 Laja</p>
             </div>
             <div class="column column--33">
-                <h2 class="column__title">Contactenos</h2>
-                <p class="column__txt">Av Los Rios #650 Laja</p>
-                <p class="column__txt">Telefono: 999-999-999</p>
+                <h2 class="column__title">Contactanos</h2>
+                <p class="column__txt"></p>
+                <p class="column__txt">Telefono: 123-456-789</p>
                
             </div>
             <div class="column column--33">
                 <h2 class="column__title">Siguenos</h2>
-                <p class="column__txt"><a href="https://www.facebook.com/profile.php?id=100010477214628" class="icon-facebook">Facebook</a></p>
-                <p class="column__txt"><a href="" class="icon-twitter">Twitter</a></p>
-                <p class="column__txt"><a href="" class="icon-instagram">Instagram</a></p>
+                <p class="column__txt"><a href="https://www.facebook.com/profile.php?id=100010477214628" class="icon-facebook">Florería Isabella Laja</a></p>
+                <p class="column__txt"><a href="https://www.instagram.com/floreria_isabella_laja/" class="icon-instagram">floreria_isabella_laja</a></p>
             </div>
             <p class="copy">@ 2024 Florería Isabella | Todos los derechos reservados</p>
         </div>
     </footer>
     <script src="js/menu.js"></script>
 </body>
-</html>
+</html> 
