--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
             </ul>
             <div class="social-icon">
                 <a href="https://www.facebook.com/profile.php?id=100010477214628" class="social-icon__link"><span class="icon-facebook"></span></a>
-                <a href="https://twitter.com" class="social-icon__link"><span class="icon-twitter"></span></a>
                 <a href="https://www.instagram.com/floreria_isabella_laja/" class="social-icon__link"><span class="icon-instagram"></span></a>
             </div>
         </div>
@@ -56,10 +55,10 @@
                 <h2 class="group__galeria">Bienvenido</h2>
                 <p class="main_txt">
                     ¡Bienvenido a Florería Isabella! Somos tu destino floral ideal, donde cada pétalo
-                     cuenta una historia y cada ramo es una expresión de amor, alegría y gratitud.
-                      Desde elegantes arreglos para eventos especiales hasta simples gestos de afecto, 
-                      estamos aquí para convertir tus momentos en memorias inolvidables.
-                       Descubre la frescura y la belleza que solo nuestras flores pueden ofrecer
+                    cuenta una historia y cada ramo es una expresión de amor, alegría y gratitud.
+                    Desde elegantes arreglos para eventos especiales hasta simples gestos de afecto, 
+                    estamos aquí para convertir tus momentos en memorias inolvidables.
+                    Descubre la frescura y la belleza que solo nuestras flores pueden ofrecer
                 </p>
             </div>
         </section>
@@ -79,27 +78,27 @@
             </div>
         </section>
         <section class="group today-special">
-            <h2 class="group__title">Más vendidos</h2>
+            <h2 class="group__galeria">Más vendidos</h2>
             <div class="container container--flex">
                 <div class="column column--50--25">
-                    <img src="imagenes/flor1.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Arreglo 1</div>
-                    <div class="today-special__price">$99</div>
+                    <img src="imagenes/especial.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">Ramo mixto </div>
+                    <div class="today-special__price">$24.990</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="imagenes/flor2.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Arreglo 2</div>
-                    <div class="today-special__price">$99</div>
+                    <img src="imagenes/medio.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">Ramo de rosas</div>
+                    <div class="today-special__price">$32.500</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="imagenes/flor3.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Arreglo 3</div>
-                    <div class="today-special__price">$99</div>
+                    <img src="imagenes/simple.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">Arreglo simple</div>
+                    <div class="today-special__price">$8.990</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="imagenes/flor4.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Arreglo 4</div>
-                    <div class="today-special__price">$99</div>
+                    <img src="imagenes/festividad.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">Arreglo mixto </div>
+                    <div class="today-special__price">$27.890</div>
                 </div>
             </div>
         </section>
