--- a/nosotros.html
+++ b/nosotros.html
@@ -26,7 +26,6 @@
                 <p class="main-header__contactInfo__addres">
                     <span class="icon-location">Av Los Rios #650 Laja</span>
                 </p>
-                
             </div>
         </div>
     </header>
@@ -41,7 +40,6 @@
             </ul>
             <div class="social-icon">
                 <a href="https://www.facebook.com/profile.php?id=100010477214628" class="social-icon__link"><span class="icon-facebook"></span></a>
-                <a href="https://twitter.com" class="social-icon__link"><span class="icon-twitter"></span></a>
                 <a href="https://www.instagram.com/floreria_isabella_laja/" class="social-icon__link"><span class="icon-instagram"></span></a>
             </div>
         </div>
@@ -50,19 +48,21 @@
         <img src="imagenes/flor3.jpg" alt="" class="banner__img">
     </section>
     <main class="main">
-        <section class="group--color">
-            <div class="container">
-                <h2 class="group__galeria">Nosotros</h2>
-                <p class="main_txt">
-                    Somos un negocio familiar arraigado en la pasión por las flores, 
-                    ubicado en el corazón de Laja. Desde generaciones, hemos dedicado 
-                    nuestras vidas a cultivar y compartir la belleza de las flores con
-                    nuestra comunidad. En nuestra florería, cada arreglo está impregnado
-                    con el cuidado y la dedicación que solo una familia puede ofrecer.
-                    Ven a visitarnos y descubre el encanto único de nuestras creaciones florales
-                </p>
-            </div>
+        <section class="group our-team">
+            <h2 class="group__galeria">Nosotros</h2>
         </section>
+        <p class="main_txt main_txt2">
+            Somos un negocio familiar arraigado en la pasión por las flores, 
+            ubicado en el corazón de Laja. Desde generaciones, hemos dedicado 
+            nuestras vidas a cultivar y compartir la belleza de las flores con
+            nuestra comunidad. En nuestra florería, cada arreglo está impregnado
+            con el cuidado y la dedicación que solo una familia puede ofrecer.
+            Ven a visitarnos y descubre el encanto único de nuestras creaciones florales
+        </p>
+        <div class="container container--flex">
+            <div class="column column--50">
+                <img src="imagenes/olaola.jpg" alt="">
+            </div>
     </main>
         <footer class="main-footer">
             <div class="container container--flex">
