--- a/contacto.html
+++ b/contacto.html
@@ -51,6 +51,11 @@
         <h2 class="group__galeria">¿Tienes alguna pregunta para nosotros?</h2>
     </section>
     <div class="form mensaje">
+        <label for="message">Nombre</label >
+        <textarea id="message" rows="1"></textarea>
+        <label for="message">Correo Electronico</label >
+            <textarea id="message" rows="1"></textarea>
+    <div class="form_qu mensaje">
         <label for="message">Escriba aquí su pregunta</label >
         <textarea id="message" rows="8"></textarea>
     </div>
