--- a/nosotros.html
+++ b/nosotros.html
@@ -51,7 +51,7 @@
         <section class="group our-team">
             <h2 class="group__galeria">Nosotros</h2>
         </section>
-        <p class="main_txt main_txt2">
+        <p class=" main_txt2">
             Somos un negocio familiar arraigado en la pasión por las flores, 
             ubicado en el corazón de Laja. Desde generaciones, hemos dedicado 
             nuestras vidas a cultivar y compartir la belleza de las flores con
@@ -60,10 +60,15 @@
             Ven a visitarnos y descubre el encanto único de nuestras creaciones florales
         </p>
         <div class="container container--flex">
-            <div class="column column--50">
+            <div>
                 <img src="imagenes/olaola.jpg" alt="">
             </div>
+        </div>
     </main>
+
+    <section class="group our-team">
+        <h2 class="group__galeria">Florería Isabella</h2>
+    </section>
         <footer class="main-footer">
             <div class="container container--flex">
                 <div class="column column--33">
